--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,12 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+overflow-x:hidden
+}
+::-webkit-scrollbar{
+  display: hidden;
+  height:0;
+  width: 0;
 }
 
 @layer base {
